tests/traci/variable_subscription/errors/UnknownVehicle/testclient_out.traci
TraCITestClient output file. Date: Fri Aug 16 10:28:20 2019


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SubscribeVariable>:
  domID=212 objID=x with 1 variables
.. Answered with error to command (212), [description: Could not add subscription. Vehicle 'x' is not known.]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
